# MetaMusic

./: .gitignore  Kryto.cpp  README.markdown  pom.xml
RatingSaver/: pom.xml
common/: pom.xml
common/src/config/properties/: commons-logging.properties  log4j-client.properties  log4j.properties  simplelog.properties
common/src/doc/: IDEAS.txt  README.txt  TODO.txt
common/src/doc/spec/: MetaMusic.tex
common/src/doc/uml/: MetaMusic-Implementierung.zargo  MetaMusic.zargo
common/src/main/doc/: TODO.txt
common/src/main/doc/spec/: MetaMusic.tex
common/src/main/resources/: commons-logging.properties  log4j-client.properties  log4j.properties  simplelog.properties
itunes-com-library/: pom.xml
itunes-xml-library/: pom.xml
itunes-xml-library/src/doc/itunes/: PropertyList-1.0.dtd  PropertyList-1.0.xsd
metamusic-build/: buildNumber.properties  pom.xml
metamusic-license/: pom.xml
mp3-parser/: pom.xml
mp3-parser/src/doc/ape/: APEv2.html  APEv2_specification.html  APEv2_tags_header.html
mp3-parser/src/doc/id3/: ID3-Tag-v1.1.html  LAME-Genrelist.byId  LAME-Genrelist.byName  id3guide.htm  id3v2.0.html  id3v2.4.0-changes.txt  id3v2.4.0-frames.txt
mp3-parser/src/doc/id3/id3tags-20000623/: 230-picture.tag  230-syncedlyrics.tag  README.txt
mp3-parser/src/main/doc/ape/: APEv2.html  APEv2_specification.html
mp3-parser/src/main/doc/id3/: id3v2.4.0-changes.txt  (+1 more)
mp3-tidy/: pom.xml
mp3-tools/: pom.xml
mp3-viewer/: pom.xml
playlist-creator/: pom.xml
playlist-creator/src/doc/m3u/: m3u_format.html
playlist-creator/src/doc/pls/: unoffical_m3u_and_pls_specification.html
rating-saver/: pom.xml
retrieval-tools/: pom.xml
retrieval-tools/src/doc/cddb/: cddb_howto.txt
retrieval-tools/src/doc/trm/: music_brains_album_attributes.txt  trm_exactness.txt
retrieval-tools/src/main/doc/: generate-axis_stubs.bat
retrieval-tools/src/main/native/: discid.h  org_metamusic_discid_DiscId.h
retrieval-tools/src/main/native/trm-0.2.1/: Makefile  Makefile.am  README  config.h  config.h.in  mbid3.cpp
retrieval-tools/src/main/native/trm-0.2.1/.deps/: main.Po
retrieval-tools/src/main/native/trm-0.2.1/gui/: about.cpp  about.dfm  about.h  trm.res  trmform.dfm  trmform.h
retrieval-tools/src/main/native/trm-0.2.1/test/: trmtest.pl
retrieval-tools/src/main/native/trm-0.2.1/win32/: trm.def
retrieval-tools/src/native/: discid.h  org_metamusic_discid_DiscId.h  org_metamusic_trm_TRM.h  trm_wrapper.c  trm_wrapper.h
retrieval-tools/src/native/linux-i386/: discid.c  make.sh
retrieval-tools/src/native/solaris-sparc/: discid.c  make.sh
retrieval-tools/src/native/trm-0.2.1/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  defs.h  dllmain.cpp  main.cpp  mbid3.cpp  mbid3.h  mp3_trm.cpp  ov_trm.cpp  trm.h  trmgenbase.h  wav_trm.cpp  wav_trm.h
retrieval-tools/src/native/trm-0.2.1/.deps/: main.Po  mbid3.Po  mp3_trm.Po  ov_trm.Po  wav_trm.Po
retrieval-tools/src/native/trm-0.2.1/gui/: about.cpp  about.dfm  about.h  trm.bpr  trm.cpp  trmform.cpp  trmform.dfm  trmform.h
retrieval-tools/src/native/trm-0.2.1/installer/: trm.wse
retrieval-tools/src/native/trm-0.2.1/test/: trmtest.pl
retrieval-tools/src/native/trm-0.2.1/win32/: trm.def  trm.dsp  trm.dsw  trm_dll.dsp
retrieval-tools/src/native/windows-i386/: discid.c  discid.vcproj
test/src/data/text/: samplelyrics.txt
test/src/data/xml/: artist.xml  artistdtd  conflicting-compositions.xml  contributor-parsing.xml  duplicates.xml  genre-user.xml  id3genres.xml  location-constraints.xml  metamusic-repository.dtd  predefined-artists.xml  predefined-genres.xml  unique-objects.xml  users.xml
(+311 files in other folders)
